--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Jhow Ken POW!</title>
+    <link rel="shortcut icon" href="imgs/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div id="topo">
@@ -17,7 +18,7 @@
         </div>
     </header>
     <main>
-        <button>Jogar AGORA!</button>
+        <button><a href="jogar/jogar.html">Jogar AGORA!</a></button>
     </main>
     
 </body>
