alteração favicon e layouts

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
     </header>
     <main>
-        <button><a href="jogar/jogar.html">Jogar AGORA!</a></button>
+        <a href="jogar/jogar.html"><button>Jogar AGORA!</button></a>
     </main>
     
 </body>
