--- a/jogar/jogar.html
+++ b/jogar/jogar.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleJogar.css">
     <link rel="shortcut icon" href="../imgs/favicon.ico" type="image/x-icon">
-    <title>Jhow Ken POW - Pedra, Papel ou Tesoura de forma Épica!</title>
+    <title>Jhow Ken POW! - Pedra, Papel ou Tesoura de forma Épica!</title>
 </head>
 <body>
         <header>
@@ -28,7 +28,11 @@
         </div>
 
         <div id="resfinal">
-            <p>Parabéns, você VENCEU! <img src="../imgs/trofeu.png" alt=""></p>
+            <!--<p>VITÓRIA!! <img src="../imgs/trofeu.png" alt=""></p>-->
+            <!--<p>Derrota... <img src="../imgs/fracassado.png" alt=""></p>-->
+            <p>Temos um EMPATE! </p>
+
+            <p><a href=""><button>Jogar de novo!</button></a></p>
         </div>
 
     
