finalização do projeto de estudo
muito orgulhoso em fazer funcionar uma lógica sem ajuda de curso

--- a/jogar/jogar.html
+++ b/jogar/jogar.html
@@ -23,17 +23,14 @@
             <p id="escolhaTexto">Você escolheu: </p>
         </div>
         <div class="resultado escondido">
-            <div id="perdedor"><img src="../imgs/tesoura.jpeg" alt=""></div>
-            <div id="perdedor"><img src="../imgs/pedra.jpeg" alt=""></div>
+            
         </div>
 
         <div id="resfinal" class="escondido">
-            <!--<p>VITÓRIA!! <img src="../imgs/trofeu.png" alt=""></p>-->
-            <!--<p>Derrota... <img src="../imgs/fracassado.png" alt=""></p>-->
-            <!--<p>Temos um EMPATE! </p>-->
-
-            <p><a href=""><button>Jogar de novo!</button></a></p>
+            
         </div>
+
+        <div id="jdenovo" class="escondido"><p><a href=""><button>Jogar de novo!</button></a></p></div>
 
 <script src="script.js"></script>
 </body>
